apps/daniboy/base/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: daniboy
  labels:
    kubernetes.io/metadata.name: daniboy
    backstage.io/kubernetes-id: daniboy
    istio-injection: enabled
spec:
  finalizers:
  - kubernetes
