apps/daniboy/base/daniboy-deploy.yaml
---
# create deployment for daniboy
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: daniboy
  namespace: daniboy
  labels:
    app: daniboy
    version: 0.0.1
    backstage.io/kubernetes-id: daniboy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: daniboy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: daniboy
        version: 0.0.1
        backstage.io/kubernetes-id: daniboy
    spec:
      containers:
      - name: daniboy
        image: diegoluisi/daniboy:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            port: 8080
            path: /health-check/readiness
        livenessProbe:
          httpGet:
            port: 8080
            path: /health-check/liveness
          initialDelaySeconds: 3
          periodSeconds: 15
