apps/daniboy/base/daniboy-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: daniboy-svc
  namespace: daniboy
  annotations:
    external-dns.alpha.kubernetes.io/hostname: daniboy.diegoluisi.eti.br
  labels:
    app: daniboy
    version: 0.0.1
    backstage.io/kubernetes-id: daniboy
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: daniboy
