apps/daniboy/base/daniboy-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: daniboy-vs
  namespace: daniboy
  labels:
    app: daniboy
    version: 0.0.1
    backstage.io/kubernetes-id: daniboy
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - daniboy.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: daniboy-svc
      weight: 100
